# hrscoreboard-backend

./: .gitignore  CMakeLists.txt  LICENSE-xxtea  README.md  common.h  main.cpp  xxtea.cpp  xxtea.h
dh/: CMakeLists.txt  dh.cpp  dh.h
xxtea/: CMakeLists.txt  LICENSE-xxtea  xxtea.cpp  xxtea.h
